# autosar_mcp_server

./: README.md  pyproject.toml  requirements.txt  server.json
examples/xml/: README.md
output/: MyPackages.arxml  NewPackage.arxml
src/: server.py  tools.py  workspace_manager.py
src/autosar_mcp/: __init__.py  config.py  errors.py  logging_conf.py  main.py  models.py  server.py  tools.py  types.py
src/autosar_mcp/core/: registry.py  workspace_manager.py
src/autosar_mcp/prompts/: prompts.py  system.md
src/autosar_mcp/resources/: autosar.md  build_order.md  naming_conventions.md
src/autosar_mcp/tools/: project.py  query.py  refactor.py
test/: verify_logic.py
test/data/: test.arxml
tests/: test_reader_writer_roundtrip.py  test_tools.py
