[project]
name = "autosar-mcp"
version = "0.1.0"
description = "AUTOSAR MCP Server"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp",
    "lxml",
    "tomli; python_version < '3.11'",
]

[project.scripts]
autosar-mcp = "autosar_mcp.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/autosar_mcp"]
